# Ohjelmistotekniikka

./: .gitignore  README.md
budget-buddy/: .pylintrc  pyproject.toml  tasks.py
budget-buddy/data/: database.sqlite
budget-buddy/src/: budget_manager.py  budget_repository.py  database_connection.py  database_manager.py  index.py  init_database.py
budget-buddy/src/tests/: budget_app_test.py  initial_test.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
